--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <groupId>com.muj.ci</groupId>
     <artifactId>calculator</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
